--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/img_Logo/LogoZ.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XXXXXXX'); 
+  </script>
+
+  <!-- Page Title -->
+  <title>Portfolio | Frontend & Fullstack Developer</title>
+
+  <!-- Description for search engines -->
+  <meta name="description" content="Personal portfolio showcasing frontend and fullstack development projects, React, JavaScript, Node.js and modern web technologies.">
+
+  <!-- Keywords -->
+  <meta name="keywords" content="portfolio, frontend developer, web developer, react, javascript, fullstack, node.js, personal website, projects, resume">
+
+  <!-- Language -->
+  <meta http-equiv="Content-Language" content="en">
+
+  <!-- Viewport for responsive design -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Canonical link -->
+  <link rel="canonical" href="https://your-portfolio.vercel.app/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Portfolio | Frontend & Fullstack Developer">
+  <meta property="og:description" content="Explore my portfolio with modern web projects, React apps, UI/UX design, and fullstack development.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://your-portfolio.vercel.app/">
+  <meta property="og:image" content="./public/Logo.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Portfolio | Frontend & Fullstack Developer">
+  <meta name="twitter:description" content="Check out my personal portfolio: modern web apps, frontend projects and fullstack development experience.">
+  <meta name="twitter:image" content="./public/Logo.jpg">
+
+  <!-- Charset -->
+  <meta charset="UTF-8" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="./src/img/img_Logo/LogoZ.png" />
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
